Pontuacao Quiz no DB

--- a/API/public/css/estilo.css
+++ b/API/public/css/estilo.css
@@ -236,7 +236,7 @@ body {
 /* FOOTER */
 
 .footer {
-  background-color:rgba(12, 12, 10, 0.26);
+  background-color: black;
   color: #fff;
   display: flex;
   font-size: 15px;
@@ -255,7 +255,7 @@ body {
 /* LOGIN */
 
 .login {
-  height: 121vh;
+  height: 125vh;
 }
 
 .login .container {
