--- a/API/public/css/dashboards.css
+++ b/API/public/css/dashboards.css
@@ -17,6 +17,7 @@ body {
 
 .dash-right .avisos {
   width: 100%;
+  height: 100%;
   color: rgb(216, 216, 216);
   font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -113,10 +114,6 @@ body {
 }
 
 /* pagina graficos */
-
-.dash-header {
-  background-color: #212124;
-}
 
 .dash {
   width: 80%;
@@ -362,7 +359,6 @@ canvas {
   top: 0;
   left: 25%;
   height: 100vh;
-  overflow: auto;
   justify-content: center;
   align-items: center;
 }
