--- a/API/public/css/dashboards.css
+++ b/API/public/css/dashboards.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-image: url(./img/1303125.jpg);
   background-size: cover;
+  
 }
 
 .label-captura {
@@ -48,22 +49,42 @@ body {
 
 .dash-right .avisos .div-form textarea {
   width: 95%;
-  border: 3px solid #32b9cd;
+  border: 3px solid #e3b062;
   background-color: white;
   border-radius: 5px;
 }
 
 .dash-right .avisos .div-form button {
+  width: 140px;
+  height: 40px;
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(to right,#77530a,#ffd277,#77530a,#77530a,#ffd277,#77530a);
+  background-size: 250%;
+  background-position: left;
+  font-size: 15px;
+  color: black;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-  font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: 2px solid black;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 10px 15px;
-  color: white;
-  background-color: #32b9cd;
-  width: 120px;
+  transition: transform 0.5s, box-shadow 0.3s;
+  overflow: hidden;
+}
+
+.dash-right .avisos .div-form button:hover {
+  background-position: right;
+  transform: scale(1.2); /* Aumenta o tamanho do card em 10% */
+}
+
+.dash-right .avisos .div-form:hover button::before {
+  background-position: right;
+  transition-duration: s;
+}
+
+.dash-right .avisos .div-form button:active {
+  transform: scale(0.95);
 }
 
 .publicacao-btn-editar {
@@ -75,7 +96,7 @@ body {
   font-size: 14px;
   padding: 5px 8px;
   color: white;
-  background-color: #32b9cd;
+  background-color: #e3b062;
   width: 80px;
 }
 
@@ -86,7 +107,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-  border-bottom: 3px solid #32b9cd;
+  border-bottom: 3px solid #e3b062;
   padding: 20px;
 }
 
@@ -112,219 +133,6 @@ body {
 .div-buttons>* {
   margin-left: 30px;
 }
-
-/* pagina graficos */
-
-.dash {
-  width: 80%;
-  position: relative;
-  top: 0;
-  left: 20%;
-  background-color: #161618;
-  height: 100vh;
-  overflow: auto;
-}
-
-.area-parametros-alerta {
-  /* border: 2px solid pink; */
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  margin: auto;
-  margin-top: 10px;
-  background-color: #212124;
-}
-
-.area-parametros-alerta .titulo-legenda {
-  color: white;
-  font-weight: 600;
-  width: fit-content;
-  margin: 10px 20px;
-}
-
-.parametros-alerta {
-  display: flex;
-  width: 100%;
-}
-
-.item-regua {
-  width: 20%;
-  text-align: center;
-  height: 80px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-self: center;
-}
-
-.item-regua p {
-  margin: 0;
-  font-weight: 500;
-}
-
-.item-regua p:nth-child(2) {
-  font-weight: 800;
-}
-
-.perigo-frio {
-  background-color: #5c6bc0;
-}
-
-.perigo-quente {
-  background-color: #ff7043;
-}
-
-.alerta-frio {
-  background-color: #42a5f5;
-}
-
-.alerta-quente {
-  background-color: #ffee58;
-}
-
-.ideal {
-  background-color: #9ccc65;
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  height: 450px;
-  width: 100%;
-  align-items: center;
-  color: white;
-}
-
-.card-aquario {
-  margin: 2%;
-  min-width: 40%;
-  max-width: 50%;
-  width: fit-content;
-  flex-wrap: wrap;
-  display: flex;
-  /* text-align: center; */
-  height: 180px;
-  /* justify-content: right; */
-  background-color: #212124;
-  font-size: 20px;
-}
-
-.card-aquario h1 {
-  width: fit-content;
-}
-
-.card-aquario p {
-  margin: 0;
-  font-size: 50px;
-  font-weight: lighter;
-  text-align: left;
-}
-
-.desc-aquario {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-}
-
-.desc-aquario .cor-alerta {
-  width: 30px;
-}
-
-.title-aquario {
-  width: 100%;
-}
-
-
-.cards h1 {
-  font-size: 22px;
-  border-bottom: solid white 1px;
-  text-align: left;
-  font-weight: lighter;
-  margin: 20px;
-}
-
-.temperatura,
-.umidade {
-  margin: 5px;
-  margin-left: 20px;
-  width: 75%;
-}
-
-.cor-alerta {
-  width: 13%;
-  height: 30%;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-.btns-dash {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 30px;
-  flex-wrap: wrap;
-  padding: 0 30% 0 30%;
-}
-
-.graph {
-  width: 70%;
-  margin: auto;
-  padding-top: 10px;
-}
-
-.tituloGraficos {
-  color: rgb(216, 216, 216);
-  display: flex;
-  justify-content: center;
-}
-
-.btn-chart {
-  font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: 0;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 10px 15px;
-  color: #32b9cd;
-  background-color: white;
-  margin: 5px;
-  border-radius: 3px;
-  cursor: pointer
-}
-
-.btn-pink {
-  color: white;
-  background-color: #32b9cd;
-}
-
-.btn-white {
-  color: #32b9cd;
-  background-color: white;
-}
-
-.label-captura {
-  height: 80px;
-}
-
-.display-none {
-  display: none;
-}
-
-.display-flex {
-  display: flex;
-}
-
-.display-block {
-  display: block;
-}
-
-canvas {
-  width: 100% !important;
-  height: 100% !important;
-}
-
-/* PAGINA DOS GRÁFICOS 2023 */
 
 .janela {
   display: flex;
@@ -360,6 +168,7 @@ canvas {
   height: 100vh;
   justify-content: center;
   align-items: center;
+  
 }
 
 .header-left h1 {
@@ -385,53 +194,8 @@ canvas {
   font-weight: 1000;
 }
 
-.btn-nav {
-  width: 40%;
-  color: #e3b062;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 2);
-  background-color: #32b8cd48;
-  border: 1px solid #32b9cd;
-  border-radius: 5px;
-  text-align: center;
-  padding: 2% 5%;
-}
 
-.btn-nav-white {
-  width: 40%;
-  background-color: #32b8cd48;
-  border: 1px solid #32b9cd;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
-  border-radius: 5px;
-  text-align: center;
-  padding: 2% 5%;
-}
 
-.btn-nav-white h3 {
-  color: #e3b062;
-  padding: 0;
-  margin: 0;
-}
 
-.btn-nav h3{
-  margin: 0;
-  padding: 0;
-  color: #e3b062;
-}
-
-.btn-logout {
-  width: 40%;
-  height: 8.5%;
-  background-color: #32b9cd;
-  color: white;
-  border-radius: 10px;
-  justify-content: center;
-  text-align: center;
-  cursor: pointer;
-}
-
-h2{
-  color: white;
-  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.215);
-}
 
 
