--- a/API/public/css/estilo.css
+++ b/API/public/css/estilo.css
@@ -26,13 +26,6 @@ body {
 }
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.header {
   height: var(--tamanho-header);
   background-color: rgba(255, 255, 255, 0); /* Branco transparente */
   transition: background-color 0.3s ease; /* Transição suave da cor de fundo */
@@ -47,7 +40,6 @@ body {
 .header.scroll-down {
   background-color: rgba(0, 0, 0, 0.8); /* Adiciona um fundo com transparência quando o usuário rolar para baixo */
   transition: top 0.3s ease; /* Transição suave do movimento */
-
 }
 
 .header .container {
@@ -60,10 +52,6 @@ body {
 .header a {
   text-decoration: none;
   color: #e3b062;
-}
-
-.agora {
-  font-weight: 800;
 }
 
 .navbar {
@@ -124,24 +112,107 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5); /* Sombreamento sutil */
 }
 
+.ban {
+  text-align: center;
+  padding: 20px;
+  background-image: url(./img/ttt.jpg);
+  background-size: cover;
+}
+
+.bann {
+  text-align: center;
+  padding: 20px;
+  background-image: url(./img/beaty.jpg);
+  background-size: cover;
+}
+
+
+.ban h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.bann h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.ban-image {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 10vh;
+}
+
+.imgg{
+  height: 600px; 
+  width: 400px; 
+  margin: 70px;
+  transition: transform 0.3s, box-shadow 0.3s;
+  border-radius: 10px;
+}
+
+.imgg:hover{
+  transform: scale(1.2); /* Aumenta o tamanho do card em 10% */
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Aumenta a sombra quando o mouse está sobre o card */
+}
+
+.ban-text {
+  width: 50%;
+  text-align: left;
+  padding-left: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
+  color: white;
+}
+
+.bann-text {
+  width: 50%;
+  text-align: left;
+  padding-left: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
+  color: white;
+}
+
+.ban h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.bann h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.ban p {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.bann p {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+
 /* MISSÃO VISÃO VALORES */
 
-#sobre-nos {
-  background-color: white;
-  padding: 50px 0;
+#sobre-nos{
+  background-image: url(./img/1299476.png); 
+  background-size: cover;
 }
 
 .titulo-sobreNos {
   text-align: center;
-  margin-bottom: 5rem;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+  color: white;
 }
 
 #sobre-nos .container {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
-  padding: 0 6rem;
   gap: 6rem;
 }
 
@@ -158,17 +229,27 @@ body {
   flex-direction: column;
   align-items: center;
   overflow: auto; /* Adicionar isso */
-  text-align: center;
+  text-align: center; 
+  transition: transform 0.3s, box-shadow 0.3s; /* Adiciona transição suave para transformação e sombra */ 
 }
 
 .card-imagem{
   width: 80%;
   height: 60%;
-  
 }
 
 #sobre-nos .container .nossos-valores{
   text-align: start;
+}
+
+#sobre-nos .container .nossos-valores:hover {
+  transform: scale(1.125); /* Aumenta o tamanho do card em 10% */
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Aumenta a sombra quando o mouse está sobre o card */
+}
+
+#sobre-nos .container:hover .nossos-valores:not(:hover) {
+  filter: blur(10px);
+  transform: scale(0.9, 0.9);
 }
 
 #sobre-nos .container h2 {
@@ -387,7 +468,7 @@ body {
 
 input {
   margin-bottom: 10px;
-  border: 2px solid #32b9cd;
+  border: 2px solid #e3b062;
   padding: 10px;
   text-align: center;
   border-radius: 10px;
@@ -416,79 +497,6 @@ input {
 .loading-div img {
   height: 50px;
   width: 50px;
-}
-
-/* SIMULADOR */
-
-.simulador {
-  color: white;
-}
-
-.simulador .container {
-  flex-direction: column;
-  overflow: scroll;
-  height: var(--tamanho-simulador);
-}
-
-/* ALERTA */
-
-#alerta {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-
-.mensagem-alarme {
-  background-color: white;
-  border-radius: 5px;
-  width: 300px;
-  height: 80px;
-  margin: 10px;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.mensagem-alarme h3 {
-  font-size: 14px;
-  margin: 0;
-}
-
-.mensagem-alarme .informacao {
-  width: 66%;
-}
-
-.alarme-sino {
-  width: 48px;
-  height: 48px;
-  animation-name: bell;
-  animation-duration: 4s;
-  background-image: url('https://cdn-icons-png.flaticon.com/512/1157/1157000.png');
-  background-size: cover;
-  animation-iteration-count: infinite;
-}
-
-@keyframes bell {
-  0% {
-    transform: rotate(25deg)
-  }
-
-  25% {
-    transform: rotate(-25deg)
-  }
-
-  50% {
-    transform: rotate(25deg)
-  }
-
-  75% {
-    transform: rotate(-25deg)
-  }
-
-  100% {
-    transform: rotate(25deg)
-  }
 }
 
 
@@ -548,6 +556,11 @@ input {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Aumenta a sombra quando o mouse está sobre o card */
 }
 
+#seila .container:hover .cardd:not(:hover) {
+  filter: blur(10px);
+  transform: scale(0.9, 0.9);
+}
+
 .card1 {
   background-image: url(../css/img/5fe9bb06f7769a25b5de016780483721.jpg);
   background-size: cover;
@@ -561,5 +574,197 @@ input {
 .card3 {
   background-image: url(../css/img/1200712ebe59c8e4e7bccee83d411c81.jpg);
   background-size: cover;
+}
+
+.conteudo{
+  background-image: url(../css/img/1309409.jpg);
+  background-size: cover;
+  /* Estilos padrão do card */
+  width: 600px;
+  height: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  transition: transform 0.3s, box-shadow 0.3s; /* Adiciona transição suave para transformação e sombra */
+}
+
+.conteudo:hover {
+  transform: scale(1.2); /* Aumenta o tamanho do card em 10% */
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); /* Aumenta a sombra quando o mouse está sobre o card */
+}
+
+.btnn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 13rem;
+  overflow: hidden;
+  height: 3rem;
+  background-size: 300% 300%;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+  transition: 0.5s;
+  animation: gradient_301 5s ease infinite;
+  border: double 4px transparent;
+  background-image: linear-gradient(#21212100, #21212100),  linear-gradient(137.48deg, #e3b062 10%, #49381f 45%, #353435 67%, #1b1b1b 93%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+#container-stars {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transition: 0.5s;
+  backdrop-filter: blur(1rem);
+  border-radius: 5rem;
+}
+
+strong {
+  z-index: 2;
+  font-size: 15px;
+  letter-spacing: 5px;
+  color: #FFFFFF;
+  text-shadow: 0 0 4px white;
+}
+
+/* #glow {
+  position: absolute;
+  display: flex;
+  width: 12rem;
+} */
+
+.circle {
+  width: 100%;
+  height: 30px;
+  filter: blur(2rem);
+  animation: pulse_3011 4s infinite;
+  z-index: -1;
+}
+
+.circle:nth-of-type(1) {
+  background: rgba(254, 83, 186, 0.636);
+}
+
+.circle:nth-of-type(2) {
+  background: rgba(142, 81, 234, 0.704);
+}
+
+.btnn:hover #container-stars {
+  z-index: 1;
+  background-color: #212121;
+}
+
+.btnn:hover {
+  transform: scale(1.1)
+}
+
+.btnn:active {
+  border: double 4px #FE53BB;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  animation: none;
+}
+
+.btnn:active .circle {
+  background: #FE53BB;
+}
+
+#stars {
+  position: relative;
+  background: transparent;
+  width: 200rem;
+  height: 200rem;
+}
+
+#stars::after {
+  content: "";
+  position: absolute;
+  top: -10rem;
+  left: -100rem;
+  width: 100%;
+  height: 100%;
+  animation: animStarRotate 90s linear infinite;
+}
+
+#stars::after {
+  background-image: radial-gradient(#ffffff 1px, transparent 1%);
+  background-size: 50px 50px;
+}
+
+#stars::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 170%;
+  height: 500%;
+  animation: animStar 60s linear infinite;
+}
+
+#stars::before {
+  background-image: radial-gradient(#ffffff 1px, transparent 1%);
+  background-size: 50px 50px;
+  opacity: 0.5;
+}
+
+@keyframes animStar {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-135rem);
+  }
+}
+
+@keyframes animStarRotate {
+  from {
+    transform: rotate(360deg);
+  }
+
+  to {
+    transform: rotate(0);
+  }
+}
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes pulse_3011 {
+  0% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 
