--- a/API/public/css/estilo.css
+++ b/API/public/css/estilo.css
@@ -199,7 +199,6 @@ body {
   width: 50%;
   text-align: left;
   padding-left: 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
   color: white;
 }
 
@@ -207,12 +206,12 @@ body {
   width: 50%;
   text-align: left;
   padding-left: 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
   color: white;
 }
 
 .ban h1 {
   font-family: 'Cinzel', serif;
+  margin-top: 12vh;;
   font-size: 3em;
   background: linear-gradient(150deg, #AE8625 1%, #ebe597 5%, #dab551 30%);
   background-clip: text;
