--- a/API/public/css/estilo.css
+++ b/API/public/css/estilo.css
@@ -456,11 +456,11 @@ body {
 .card_erro {
   display: none;
   background-color: #fff;
-  color: black;
+  color: rgba(0, 0, 0, 0.562);
   width: 230px;
   position: fixed;
+  margin-bottom: 100px;
   border-radius: 4px;
-  border: #e6005a 3px solid;
   padding: 10px;
   margin-right: 10%;
 }
