--- a/API/public/css/acont.css
+++ b/API/public/css/acont.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-image: url(./img/oi.jpg);
 }
 
 .quiz-container {
@@ -7,12 +8,14 @@ body {
     margin: auto;
     text-align: center;
     padding: 20px;
-    border: 1px solid #ddd;
+    background-color: rgba(0, 0, 0, 0.568);
     border-radius: 10px;
+    margin-top: 150px;
 }
 
 .question {
-    font-size: 1.2em;
+    font-size: 1.3em;
+    color: white;
 }
 
 .options {
@@ -30,6 +33,7 @@ body {
     width: 100%;
     border: none;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 .correct {
