--- a/API/public/css/psg.css
+++ b/API/public/css/psg.css
@@ -10,10 +10,11 @@ body {
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.567);
+  margin-top: 45px;
 }
 
 .question {
-  font-size: 1.2em;
+  font-size: 1.3em;
   color: white;
 }
 
@@ -37,6 +38,7 @@ body {
   width: 100%;
   border: none;
   cursor: pointer;
+  border-radius: 4px;
 }
 
 .correct {
@@ -53,4 +55,74 @@ body {
   font-size: 1.5em;
   margin-top: 20px;
   color: white;
+}
+
+
+.quiz-containee {
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.697);
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  width: 600px;
+  height: 550px;
+}
+
+.quiz-containe{
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.697);
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  width: 600px;
+  height: 520px;
+  margin-top: 25px;
+}
+
+.next-button {
+  background-color: #cdab7770;
+  color: white;
+  padding: 12px 24px;
+  /* Reduzindo o padding para diminuir o tamanho do botão */
+  border: 2px solid #e3b062;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: background-color 0.3s;
+  margin: 20px auto 0;
+  width: calc(100% - 20px);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.83);
+}
+
+
+.answer-button {
+  background-color: #cdab7770;
+  color: white;
+padding: 10px 20px;
+  /* Reduzindo o padding para diminuir o tamanho dos botões */
+  border: #e3b062 solid 2px;
+  border-radius: 8px;
+  /* Reduzindo o raio do border-radius para arredondar menos os cantos */
+cursor: pointer;
+  font-size: 16px;
+  /* Reduzindo o tamanho da fonte */
+  font-weight: bold;
+  margin-bottom: 10px;
+  transition: background-color 0.3s;
+  width: calc(50% - 5px);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.83);
+}
+
+.answer-group {
+  text-align: center;
+  /* Centralizando os botões */
+}
+
+.answer-button:hover{
+  background-color: #e3b062;
 }
