--- a/API/public/css/acont.css
+++ b/API/public/css/acont.css
@@ -10,7 +10,7 @@ body {
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.568);
     border-radius: 10px;
-    margin-top: 150px;
+    margin-top: 30vh;
 }
 
 .question {
