--- a/API/public/css/psg.css
+++ b/API/public/css/psg.css
@@ -10,7 +10,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.567);
-  margin-top: 55px;
+  margin-top: 40vh;
 }
 
 .question {
