--- a/API/public/css/acont.css
+++ b/API/public/css/acont.css
@@ -10,7 +10,7 @@ body {
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.568);
     border-radius: 10px;
-    margin-top: 30vh;
+    margin-top: 33vh;
 }
 
 .question {
@@ -49,4 +49,5 @@ body {
 .score {
     font-size: 1.5em;
     margin-top: 20px;
+    color: white;
 }
