--- a/API/public/css/estilo.css
+++ b/API/public/css/estilo.css
@@ -617,7 +617,7 @@ input {
 }
 
 .conteudo {
-  background-image: url(../css/img/1309409.jpg);
+  background-image: url(../css/img/yellow.jpg);
   background-size: cover;
   /* Estilos padrão do card */
   width: 600px;
