--- a/API/public/css/ranking.css
+++ b/API/public/css/ranking.css
@@ -91,3 +91,16 @@ select:focus {
     outline: none;
     border-color: #888;
 }       
+
+.back-button {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: #444;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+    background-color: #555;
+}
