--- a/API/public/css/acont.css
+++ b/API/public/css/acont.css
@@ -51,3 +51,27 @@ body {
     margin-top: 20px;
     color: white;
 }
+
+a {
+    text-decoration: none;
+  }
+  
+  #dashboardButtonContainer {
+    margin-top: 40px;
+  }
+
+  .next-button {
+    background-color: #cdab7770;
+    color: white;
+    padding: 12px 24px;
+    /* Reduzindo o padding para diminuir o tamanho do botão */
+    border: 2px solid #e3b062;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+    margin: 20px auto 0;
+    width: calc(100% - 20px);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.83);
+  }
