--- a/API/public/css/casas.css
+++ b/API/public/css/casas.css
@@ -28,3 +28,16 @@ body {
   font-weight: bold;
   margin-bottom: 20px; 
 }
+
+.back-button {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: #444;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+  background-color: #555;
+}
