--- a/API/public/css/conteudo.css
+++ b/API/public/css/conteudo.css
@@ -6,6 +6,96 @@ body {
     min-height: 100vh;
 }
 
+:root {
+    --tamanho-header: 80px;
+    --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --tamanho-simulador: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --tamanho-login: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --tamanho-footer: 55px;
+  }
+
+.header {
+    height: var(--tamanho-header);
+    background-color: rgba(255, 255, 255, 0);
+    /* Branco transparente */
+    transition: background-color 0.3s ease;
+    /* Transição suave da cor de fundo */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    /* Certifique-se de que o header esteja acima de outros elementos */
+    transition: background-color 0.3s ease, top 0.5s ease;
+    /* Transição suave da cor de fundo e do movimento */
+  }
+  
+  .header.scroll-down {
+    background-color: rgba(0, 0, 0, 0.8);
+    /* Adiciona um fundo com transparência quando o usuário rolar para baixo */
+    transition: top 0.3s ease;
+    /* Transição suave do movimento */
+  }
+  
+  .header .cont {
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 80%;
+  }
+  
+  .cont {
+    display: flex;
+    width: 80%;
+    height: 100%;
+    margin: auto;
+  }
+  
+  .header a {
+    text-decoration: none;
+    color: #e3b062;
+  }
+  
+  .navbar {
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    color: #e3b062;
+  }
+  
+  .navbar a {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
+    font-size: 20px;
+  }
+  
+  .titulo {
+    font-family: 'Benton Sans', sans-serif;
+    font-weight: 3000;
+    font-size: 40px;
+    margin: 0;
+    /* Remova a margem padrão do p */
+    padding: 0px 0;
+    margin-top: 10px;
+    /* Ajuste o espaço entre o logotipo e a frase */
+  }
+  
+  .logoHeader {
+    width: 90px;
+    height: 70px;
+    margin-right: 10px;
+  }
+  
+  .logo-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .header h1 {
+    margin: 0;
+  }
+
 .ban {
     background-color: #1B1C1D;
     text-align: center;
@@ -220,30 +310,31 @@ body {
 
 .movie-info {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-bottom: 20px;
 }
 
 .info-column {
-    padding: 10px;
+    padding: 40px 25px 25px 25px;
     margin: 10px;
     background-color: rgb(59, 59, 59);
     color: white;
     border-radius: 5px;
     flex: 1;
-    max-width: calc(33.33% - 20px);
+    max-width: calc(27.33% - 20px);
+    height: 31vh;
     transition: transform 0.2s, box-shadow 0.3s;
 }
 
 .info-column:hover{
-    transform: scale(1.025);
+    transform: scale(1.1);
     /* Aumenta o tamanho do card em 10% */
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     /* Aumenta a sombra quando o mouse está sobre o card */
 }
 
 .info-column:last-child {
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 .movie-text {
@@ -365,7 +456,7 @@ body {
     color: white;
     text-align: center;
     justify-content: center;
-    padding: 4px;
+    padding: 7px;
 }
 
 .flip-card-back p {
@@ -417,6 +508,7 @@ body {
     color: white;
     text-align: center;
     justify-content: center;
+    padding: 7px;
 }
 
 .flip-card-backk p {
