--- a/API/public/css/dash.css
+++ b/API/public/css/dash.css
@@ -78,3 +78,16 @@ button:active {
     background-color: #666;
     transform: scale(0.95);
 }
+
+.back-button {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: #444;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.back-button:hover {
+    background-color: #555;
+}
