--- a/API/public/css/psg.css
+++ b/API/public/css/psg.css
@@ -10,7 +10,15 @@ body {
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.567);
-  margin-top: 8vh;
+  margin-top: 12vh;
+}
+
+a {
+  text-decoration: none;
+}
+
+#dashboardButtonContainer {
+  margin-top: 40px;
 }
 
 .question {
@@ -80,7 +88,7 @@ body {
   text-align: center;
   width: 600px;
   height: 520px;
-  margin-top: 8vh;
+  margin-top: 12vh;
 }
 
 .next-button {
